force-app/main/default/objects/DE_Community_Settings__c/DE_Community_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DE community settings</label>
</CustomObject>