force-app/main/default/objects/DE_Community_Settings__c/fields/Get_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Get_Token_Endpoint__c</fullName>
    <label>Get Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>