force-app/main/default/objects/DE_Community_Settings__c/fields/Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Grant_type__c</fullName>
    <label>Grant type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>