force-app/main/default/objects/DE_Community_Settings__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>