force-app/main/default/objects/DE_Community_Settings__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <label>Security Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>