force-app/main/default/objects/DE_Community_Settings__c/fields/Update_Account_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Update_Account_Endpoint__c</fullName>
    <label>Update Account Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>